Fix cover matrix alignment

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -172,8 +172,12 @@
 .wp-block-cover__image-background,
 .wp-block-cover__video-background {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: inherit;
+	height: inherit;
 	object-fit: cover;
 }
 
